force-app/main/default/objects/Clausula__c/Clausula__c.object-meta.xml
<CustomObject>
    <description>Clausulas do contrato gerado para uma oportunidade, editaveis por negociacao.</description>
    <label>Clausula</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Numero da Clausula</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clausulas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>