force-app/main/default/objects/Clausula__c/fields/Ativa__c.field-meta.xml
<CustomField>
    <fullName>Ativa__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica se a clausula deve aparecer no PDF final.</description>
    <label>Ativa</label>
    <type>Checkbox</type>
</CustomField>