force-app/main/default/objects/Clausula__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <description>Contrato ao qual esta clausula pertence.</description>
    <label>Contrato</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>Clausulas</relationshipLabel>
    <relationshipName>Clausulas</relationshipName>
    <type>MasterDetail</type>
</CustomField>