force-app/main/default/objects/Clausula__c/fields/Editada__c.field-meta.xml
<CustomField>
    <fullName>Editada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o texto da clausula foi alterado apos a geracao inicial.</description>
    <label>Editada</label>
    <type>Checkbox</type>
</CustomField>