force-app/main/default/objects/Clausula__c/fields/Modelo_Contrato_Padrao__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Contrato_Padrao__c</fullName>
    <description>Exibe o nome do contrato padrao relacionado ao contrato da clausula.</description>
    <formula>Contrato__r.Contrato_Padrao__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Modelo de Contrato Padrao</label>
    <type>Text</type>
</CustomField>