force-app/main/default/objects/Clausula__c/fields/Origem_Clausula_Padrao__c.field-meta.xml
<CustomField>
    <fullName>Origem_Clausula_Padrao__c</fullName>
    <description>Clausula padrao que originou esta clausula do contrato.</description>
    <label>Origem da Clausula Padrao</label>
    <referenceTo>Clausula_Padrao__c</referenceTo>
    <relationshipName>Origem_Clausula_Padrao</relationshipName>
    <type>Lookup</type>
</CustomField>