force-app/main/default/objects/Clausula__c/fields/Secao__c.field-meta.xml
<CustomField>
    <fullName>Secao__c</fullName>
    <description>Secao a qual a clausula pertence no documento.</description>
    <label>Secao</label>
    <length>120</length>
    <type>Text</type>
</CustomField>