force-app/main/default/objects/Clausula__c/fields/Servico_Origem_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Servico_Origem_Relacionado__c</fullName>
    <description>Exibe o servico de origem do contrato padrao vinculado ao contrato da clausula.</description>
    <formula>TEXT(Contrato__r.Contrato_Padrao__r.Servico_Origem__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Servico de Origem Relacionado</label>
    <type>Text</type>
</CustomField>