force-app/main/default/objects/Clausula__c/fields/Texto__c.field-meta.xml
<CustomField>
    <fullName>Texto__c</fullName>
    <description>Texto editavel da clausula utilizada no contrato.</description>
    <label>Texto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>