force-app/main/default/objects/Clausula__c/fields/Tipo_Contrato_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Contrato_Relacionado__c</fullName>
    <description>Exibe o tipo de contrato do Contrato relacionado.</description>
    <formula>TEXT(Contrato__r.Tipo_Contrato__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Tipo de Contrato Relacionado</label>
    <type>Text</type>
</CustomField>