force-app/main/default/objects/Clausula__c/fields/Titulo__c.field-meta.xml
<CustomField>
    <fullName>Titulo__c</fullName>
    <description>Titulo da clausula no contrato.</description>
    <label>Titulo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>